--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,15 @@
-.body{
+body{
     background-color: dimgrey;
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.h1{
-    color: goldenrod;
-    font-size: 30px;
+h1{
+    color: rgb(38, 218, 32);
+    font-size: 70px;
+}
+
+p{
+    font-size: 17px;
+    font-weight: 300;
 }
