--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,21 @@
 body{
-    background-color: dimgrey;
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 h1{
-    color: rgb(38, 218, 32);
+    color: rgb(32, 106, 218);
     font-size: 70px;
 }
 
 p{
     font-size: 17px;
     font-weight: 300;
+}
+
+.contenedor.blog {
+    width: 800px;
+    text-align: justify;
+    margin: 0 auto;
 }
